--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chalk": "^4.1.0",
     "esm": "^3.2.25",
     "handlebars": "^4.7.6",
-    "inquirer": "^7.2.0"
+    "inquirer": "^7.2.0",
+    "pluralize": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
