--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eriklenaerts/openapi-docgen",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "description": "Generate an Open API document to kick start your REST API design or development.",
   "main": "src/index.js",
   "bin": {
@@ -11,16 +11,18 @@
     "access": "public"
   },
   "dependencies": {
-    "arg": "^4.1.3",
-    "chalk": "^4.1.0",
+    "arg": "^5.0.0",
+    "chalk": "^4.1.1",
     "esm": "^3.2.25",
-    "handlebars": "^4.7.6",
-    "inquirer": "^7.2.0",
+    "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
+    "inquirer": "^8.1.2",
     "pluralize": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "node --debug-brk=5858 bin/generator"
   },
   "keywords": [
     "cli",
