--- a/templates/yaml/v3/monitoring.yaml
+++ b/templates/yaml/v3/monitoring.yaml
@@ -6,7 +6,7 @@ info:
 servers:
 - url: /
 paths: 
-  /status-health:
+  /status/health:
     get:
       summary: Returns the health status of this Service
       description: >-
