--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@eriklenaerts/openapi-docgen",
-  "version": "0.3.0",
+  "version": "0.3.7",
   "description": "Generate an Open API document to kick start your REST API design or development.",
   "main": "src/index.js",
   "bin": {
-    "@eriklenaerts/openapi-docgen": "bin/generator",
-    "openapi-docgen": "bin/generator"
+    "@eriklenaerts/openapi-docgen": "./bin/generator",
+    "openapi-docgen": "./bin/generator"
   },
   "publishConfig": {
     "access": "public"
@@ -14,13 +14,13 @@
     "arg": "^5.0.0",
     "chalk": "^4.1.1",
     "esm": "^3.2.25",
+    "get-installed-path": "^4.0.8",
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
+    "highlight.js": ">=10.4.1",
     "inquirer": "^8.1.2",
-    "pluralize": "^8.0.0",
-    "highlight.js": ">=10.4.1"
+    "pluralize": "^8.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "node --debug-brk=5858 bin/generator"
@@ -36,4 +36,3 @@
   "author": "Erik Lenaerts",
   "license": "MIT"
 }
-
