--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "arg": "^5.0.0",
+    "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "esm": "^3.2.25",
     "get-installed-path": "^4.0.8",
