extra checks & documentation for new config variables

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Choose your template provider ('FileSystem' or 'Online')
-TEMPLATE_PROVIDER=FileSystem
+TEMPLATE_PROVIDER = FileSystem
 
 # Base location for the Online Template Provider
-#TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi-generator/master/templates/
+# TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi-generator/master/templates/
 
 # Base location for the FileSystem Template Provider
 TEMPLATES_BASE_LOCATION = ../templates
@@ -17,5 +17,5 @@ DEFAULT_TARGET_LOCATION = ~/Downloads/oas-documents
 
 # if true, each target file will have a unique part in the filename so it always writes a new file.
 # if false, the target file name stays the same over multiple generation runs and thus overwrites it each time.
-UNIQUE_TARGET = false
+#UNIQUE_TARGET = true
 
