rearranged cli parameters #11

--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ TEMPLATES_BASE_LOCATION = ../templates
 # if this is not set here or in via the cli argument, it is set to 'default.hbs'
 DEFAULT_TEMPLATE = digipolis_7_0.hbs
 
-# Set the default target location in case nothing was provided using the --target cli argument
+# Set the default output location in case nothing was provided using the --output cli argument
 # if this is not set here or in via the cli argument, it is set to the current working folder.
-DEFAULT_TARGET_LOCATION = ~/Downloads/oas-documents
+DEFAULT_OUTPUT_LOCATION = ~/Downloads/oas-documents
 
-# if true, each target file will have a unique part in the filename so it always writes a new file.
-# if false, the target file name stays the same over multiple generation runs and thus overwrites it each time.
-#UNIQUE_TARGET = true
+# if true, each output file will have a unique part in the filename so it always writes a new file.
+# if false, the output file name stays the same over multiple generation runs and thus overwrites it each time.
+#UNIQUE_OUTPUT_FILENAME = true
 
