--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TEMPLATE_PROVIDER = FileSystem
 # TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi-generator/master/templates/
 
 # Base location for the FileSystem Template Provider
-TEMPLATES_BASE_LOCATION = ../templates
+ TEMPLATES_BASE_LOCATION = ../templates
 
 # Set the default template in case nothing was provided using the --template cli argument
 # if this is not set here or in via the cli argument, it is set to 'default.hbs'
@@ -18,4 +18,8 @@ DEFAULT_OUTPUT_LOCATION = ~/Downloads/oas-documents
 # if true, each output file will have a unique part in the filename so it always writes a new file.
 # if false, the output file name stays the same over multiple generation runs and thus overwrites it each time.
 #UNIQUE_OUTPUT_FILENAME = true
+
+# Set what operators are served by default
+# to calculate this number, read https://github.com/eriklenaerts/openapi-generator#calculate-the-operations-modifier
+DEFAULT_OPS = 10
 
