--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DEFAULT_TEMPLATE = digipolis_7_0.hbs
 
 # Set the default output location in case nothing was provided using the --output cli argument
 # if this is not set here or in via the cli argument, it is set to the current working folder.
-DEFAULT_OUTPUT_LOCATION = ~/Downloads/oas-documents
+DEFAULT_OUTPUT_LOCATION = ~/Downloads/test
 
 # if true, each output file will have a unique part in the filename so it always writes a new file.
 # if false, the output file name stays the same over multiple generation runs and thus overwrites it each time.
