added a setup option

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 # Choose your template provider ('FileSystem' or 'Online')
-TEMPLATE_PROVIDER = FileSystem
+TEMPLATE_PROVIDER = Online
 
 # Base location for the Online Template Provider
-# TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi-generator/master/templates/
+TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi-generator/master/templates/
 
-# Base location for the FileSystem Template Provider
-TEMPLATES_BASE_LOCATION = ../templates
+# IF you use the FileSystem template provider, uncomment this line here
+# TEMPLATES_BASE_LOCATION = ../templates
 
 # Set the default template in case nothing was provided using the --template cli argument
-# if this is not set here or in via the cli argument, it is set to 'default.hbs'
+# if this is not set here or in via the cli argument, the fallback is 'default.hbs'
 DEFAULT_TEMPLATE = digipolis_7_0.hbs
 
 # Set the default output location in case nothing was provided using the --output cli argument
-# if this is not set here or in via the cli argument, it is set to the current working folder.
+# if this is not set here or in via the cli argument, the fallback is the current working folder.
 DEFAULT_OUTPUT_LOCATION = ~/Downloads/test
 
 # if true, each output file will have a unique part in the filename so it always writes a new file.
