--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ TEMPLATES_BASE_LOCATION = https://raw.githubusercontent.com/eriklenaerts/openapi
 # TEMPLATES_BASE_LOCATION = ../templates
 
 # Set the default template in case nothing was provided using the --template cli argument
-# if this is not set here or in via the cli argument, the fallback is 'default.hbs'
+# if this is not set here or in via the cli argument, the fallback is 'basic.hbs'
 DEFAULT_TEMPLATE = digipolis_7_0.hbs
 
 # Set the default output location in case nothing was provided using the --output cli argument
@@ -21,4 +21,4 @@ DEFAULT_OUTPUT_LOCATION = ~/Downloads/test
 
 # Set what operators are served by default
 # to calculate this number, read https://github.com/eriklenaerts/openapi-generator#calculate-the-operations-modifier
-DEFAULT_OPS = 238
+DEFAULT_OPS_MODIFIER = 238
