--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eriklenaerts/openapi-docgen",
-  "version": "0.4.9",
+  "version": "0.4.91",
   "description": "Generate an Open API document to kick start your REST API design or development.",
   "main": "src/index.js",
   "bin": {
@@ -11,8 +11,9 @@
     "access": "public"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "arg": "^5.0.0",
-    "axios": "^0.21.1",
+    "axios": ">=0.21.2",
     "chalk": "^4.1.1",
     "dotenv": "^10.0.0",
     "handlebars": "^4.7.7",
