--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@eriklenaerts/openapi-docgen",
-  "version": "0.4.98",
+  "version": "0.4.99",
   "description": "Generate an Open API document to kick start your REST API design or development.",
   "main": "src/index.js",
   "bin": {
     "@eriklenaerts/openapi-docgen": "./bin/generator",
-    "openapi-docgen": "./bin/generator"
+    "openapi-docgen": "./bin/generator",
+    "oadc": "./bin/generator"
   },
   "publishConfig": {
     "access": "public"
